--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="http://gbonanome.github.io/opendatabingo/">Open Data Bingo</a>
+                    <a class="brand" href="http://gbonanome.github.io/opendatabingo/">Bingo dos Dados Abertos</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
@@ -52,7 +52,7 @@
 
         <div class="container">
             <div class="page-header">
-                <h1>Open Data Bingo <small>Quali sono le principali preoccupazioni sull'apertura dei dati e le risposte che si sono dimostrate efficaci</small></h1>
+                <h1>Bingo dos Dados Abertos <small>Preocupações sobre abertura de dados e respostas que têm se mostrado efetivas</small></h1>
             </div>
             
         <!-- Example row of columns -->
@@ -84,7 +84,7 @@
             <div class="well">
                 <h5>{{title}}</h5>
                 <!-- Button to trigger modal -->
-                <a href="#modal-{{id}}" role="button" class="btn btn-mini btn-info" data-toggle="modal">Risposte</a>
+                <a href="#modal-{{id}}" role="button" class="btn btn-mini btn-info" data-toggle="modal">Respostas</a>
              
                 <!-- Modal -->
                 <div id="modal-{{id}}" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="modal-{{id}}-label" aria-hidden="true">
@@ -100,7 +100,7 @@
                       </ul>
                   </div>
                   <div class="modal-footer">
-                    <button class="btn" data-dismiss="modal" aria-hidden="true">Chiudi</button>
+                    <button class="btn" data-dismiss="modal" aria-hidden="true">Fechar</button>
                   </div>
                 </div>
             </div>
