--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
                     <a class="brand" href="http://gbonanome.github.io/opendatabingo/">Open Data Bingo</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li class="active"><a href="#">Cos'è?</a></li>
+                            <li><a href="index.html">Início</a></li>
+                            <li class="active"><a href="#">O que é?</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
