--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <a class="brand" href="http://gbonanome.github.io/opendatabingo/">Bingo dos Dados Abertos</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="about.html">Cos'è?</a></li>
+                            <li class="active"><a href="#">Início</a></li>
+                            <li><a href="about.html">O que é?</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
