--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
 
             <footer>
-            	<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+            	<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a><br />Este trabalho está licenciado sob uma licença <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Atribuição 3.0 Não Adaptada</a>.
             </footer>
         </div> <!-- /container -->
 
