--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Open Data Bingo - Cos'è?</title>
-        <meta name="description" content="Open Data Bingo - Cos'è?">
+        <title>Open Data Bingo - O que é?</title>
+        <meta name="description" content="Open Data Bingo - O que é?">
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -52,7 +52,7 @@
 
         <div class="container">
             <div class="page-header">
-                <h1>Cos'è?</h1>
+                <h1>O que é?</h1>
             </div>
             
         
