edit titles for consistency

--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Open Data Bingo - O que é?</title>
-        <meta name="description" content="Open Data Bingo - O que é?">
+        <title>Bingo dos Dados Abertos - O que é?</title>
+        <meta name="description" content="Bingo dos Dados Abertos - O que é?">
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -39,7 +39,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="http://gbonanome.github.io/opendatabingo/">Open Data Bingo</a>
+                    <a class="brand" href="http://gbonanome.github.io/opendatabingo/">Bingo dos Dados Abertos</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li><a href="index.html">Início</a></li>
