--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Open Data Bingo</title>
-        <meta name="description" content="Open Data Bingo">
+        <title>Bingo dos Dados Abertos</title>
+        <meta name="description" content="Bingo dos Dados Abertos">
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
